# miqyas

./: .env  .env.example  .gitignore  CONTEXT.md  Makefile  PLAYBOOK.md  README.md  SETUP_GUIDE_RU.md
backend/: Dockerfile  Dockerfile.worker  alembic.ini  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.json  railway.worker.json  requirements-api.txt  requirements-worker.txt  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/v1/: __init__.py  bim.py  captures.py  cv_pipeline.py  pipeline.py  procore.py  projects.py  reports.py  schedules.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/alignment/: __init__.py
backend/app/services/auto_linker/: __init__.py  linker.py
backend/app/services/bim_renderer/: __init__.py  quality.py
backend/app/services/colmap_orchestrator/: __init__.py
backend/app/services/ifc_parser/: __init__.py  parser.py
backend/app/services/p6_parser/: __init__.py  parser.py
backend/app/services/procore/: __init__.py
backend/app/services/progress_engine/: __init__.py
backend/app/services/report_generator/: __init__.py
backend/app/tasks/: cv_tasks.py  ifc_tasks.py  p6_tasks.py  pipeline.py  procore_tasks.py  video_tasks.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_geometry_mesh.py  003_add_alignment_quality_fields.py
backend/tests/: conftest.py
backend/tests/unit/: test_procore.py  test_projects.py  test_xer_parser.py
(+69 files in other folders)
